cabal-version:      3.0
name:               JsonParser
version:            0.1.0.0
synopsis:           Json file parser for Haskell
-- description:
license:            MIT
license-file:       LICENSE
author:             semssk
maintainer:         ssksem015@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite JsonParser-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        JsonParser
